--- a/ProjectManager.Web/src/app/theme/pages/default/projects/projects.component.html
+++ b/ProjectManager.Web/src/app/theme/pages/default/projects/projects.component.html
@@ -17,6 +17,6 @@
 <!-- END: Subheader -->
 <div class="m-content">
     <div>
-        Skeleton page
+        <datatable></datatable>
     </div>
 </div>
